--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.13.8",
-    "date-fns": "^4.1.0",
-    "graphql": "^16.11.0",
-    "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "next": "15.3.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
