--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,15 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
-  }
-},
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "dotenv": "^16.5.0"
+  }
 }
